# rust-web-starter

./: Cargo.toml  Dockerfile  README.md  readme.md  run-dynamodb.sh  run-e2e.sh  run-s3.sh
.github/workflows/: audit-on-push.yaml  docker-publish.yml  general.yaml
client/: Cargo.toml
client/src/: main.rs
collector/: Cargo.toml  Dockerfile
collector/src/: main.rs  repository.rs
infrastructure/: deployment.yaml  persistent-volume-claim.yaml  service.yaml
price-checker/: Cargo.toml  Dockerfile
price-checker/src/: main.rs  repository.rs
src/: main.rs
src/data-collector/: Cargo.toml  readme.md
src/data-collector/src/: main.rs
src/database/src/: main.rs
