[package]
name = "client"
version = "0.1.0"
authors = ["David MacEachern <david.maceachern.tech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.45.0"
rusoto_credential = "0.45.0"
rusoto_dynamodb = "0.45.0"
rusoto_s3 = "0.45.0"
reqwest = { version = "0.10", features = ["json", "stream"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = { version = "0.3" }
anyhow = "1.0.33"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.59"
uuid = { version = "0.8", features = ["v4"] }
tempfile = "3.1.0"
