[package]
name = "collector"
version = "0.1.0"
authors = ["David MacEachern <david.maceachern.tech@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.13"
dotenv = "0.15.0"
femme = "2.1.0"
kv-log-macro = "1.0.7"
async-std = "1.6.2"
surf = "1.0.3"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
thiserror = "1.0.16"
