[package]
name = "data-collector"
version = "0.1.0"
authors = ["David MacEachern <david.maceachern.tech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
dotenv = "0.15.0"
femme = "2.1.0"
kv-log-macro = "1.0.7"
async-std = "1.6.2"
surf = "1.0.3"
serde = "1.0.114"
serde_json = "1.0.56"
thiserror = "1.0.16"